# faradata

./: .gitignore  Makefile  pyproject.toml
dataspecs/: census2019.yaml
faradata/: faracsv.py  join.py
