[tool.poetry]
name = "faradata"
version = "0.1.0"
description = ""
authors = ["vengroff <vengroff@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
censusdis = "^0.99.12"
logargparser = "^0.1.1"
openpyxl = "^3.1.2"

[tool.poetry.group.test.dependencies]
flake8 = "^6.0.0"
black = "^23.7.0"
isort = "^5.12.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
